# turtlebot

./: .gitignore  Delete if TTB is updated to melodic
gazebo_object_possession/: CMakeLists.txt  package.xml
gazebo_object_possession/include/gazebo/: ObjectPossession.h
gazebo_object_possession/src/: ObjectPossession.cpp
hinged_door_controller/: CMakeLists.txt  package.xml
hinged_door_controller/include/gazebo/: HingedDoorController.h
hinged_door_controller/src/: HingedDoorController.cpp
logical_occlusion_plugin/: CMakeLists.txt  package.xml
logical_occlusion_plugin/include/: LogicalOcclusionPlugin.h
logical_occlusion_plugin/src/: LogicalOcclusionPlugin.cpp
poi_labeling/: CMakeLists.txt  package.xml
poi_labeling/include/poi_labeling/: POILabeling.h
poi_labeling/src/: POILabeling.cpp
poi_spawner/: CMakeLists.txt  package.xml
poi_spawner/include/poi_spawner/: POISpawnerPlugin.h
poi_spawner/src/: POISpawnerPlugin.cpp
turtlebot_bringup/launch/: amcl.launch  amcl_robot.launch  disaster.launch  gmapping.launch  move_base.launch.xml  move_base_robot.launch.xml  navigation_gazebo.launch  navigation_gazebo_disaster.launch  ninjaturtles.launch  praktikum.launch  rviz.launch  rviz_robot.launch  rviz_sim_disaster.launch  service_robots.launch  simulation.launch  teleop.launch
turtlebot_bringup/launch/includes/: robot.launch.xml
turtlebot_bringup/launch/includes/kobuki/: mobile_base.launch.xml
turtlebot_bringup/maps/: department_sim.yaml
turtlebot_bringup/models/blueBook/: model.config  model.sdf
turtlebot_bringup/models/book_blue/: model.config  model.sdf
turtlebot_bringup/models/book_green/: model.config  model.sdf
turtlebot_bringup/models/book_red/: model.config  model.sdf
turtlebot_bringup/models/bookshelf/: model.config
turtlebot_bringup/models/chair/: model.config  model.sdf
turtlebot_bringup/models/chair/meshes/: chair3.dae
turtlebot_bringup/models/cokeCan/: model-1_4.sdf  model.config
turtlebot_bringup/models/coke_can/: model-1_4.sdf
turtlebot_bringup/models/cup/: model-1_4.sdf  model.config
turtlebot_bringup/models/debugPoint/: debugPoint.config  debugPoint.sdf
turtlebot_bringup/models/debug_point/: debug_point.config  debug_point.sdf
turtlebot_bringup/models/distributed_systems_department/: model.sdf
turtlebot_bringup/models/door/: doorcmd.sh  model-1_4.sdf
turtlebot_bringup/models/drill/: model-1_4.sdf
turtlebot_bringup/models/greenBook/: model.config  model.sdf
turtlebot_bringup/models/hinged_door/: model-1_4.sdf  model.sdf
turtlebot_bringup/models/largeTable/: model.config  model.sdf
turtlebot_bringup/models/mediumTable/: model.config  model.sdf
turtlebot_bringup/models/monkeyWrench/: model-1_4.sdf
turtlebot_bringup/models/poi/: poi.config  poi.sdf
turtlebot_bringup/models/redBook/: model.config  model.sdf
turtlebot_bringup/models/smallTable/: model.config  model.sdf
turtlebot_bringup/models/trashCan/: model.sdf
turtlebot_bringup/models/trash_can/: model.config  model.sdf
turtlebot_bringup/param/: costmap_common_params_ninja.yaml  dwa_local_planner_params_ninja.yaml  dwa_local_planner_params_ninja_robot.yaml  global_costmap_params_ninja.yaml  global_planner_params_ninja.yaml  local_costmap_params_ninja.yaml  move_base_params_ninja.yaml  move_base_params_ninja_robot.yaml
turtlebot_bringup/param/defaults/: smoother.yaml
turtlebot_bringup/rviz/: multi-robot-simulation-disaster.rviz  multi-robot-simulation.rviz  multi-robot.rviz
turtlebot_bringup/world/: distributed_system_boxes.world  distributed_systems.world  distributed_systems_complex.world  distributed_systems_disaster.world  distributed_systems_simple.world  empty.world  empty2.world  floorplan.dae  test.sdf
turtlebot_description/robots/: kobuki_ninja-hexagons_ninja-kinect.urdf.xacro  kobuki_ninja-hexagons_ninja-kinect_sim.urdf.xacro
turtlebot_description/test/: test_urdf.cpp
turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro  turtlebot_properties.urdf.xacro
turtlebot_description/urdf/actuators/: turtlebot_sim_arm.urdf.xacro
turtlebot_description/urdf/sensors/: hokuyo_laser.urdf.xacro  ninja_kinect.urdf.xacro  turtlebot_logical_camera_plugin.urdf.xacro  turtlebot_logical_dist.urdf.xacro  turtlebot_logical_occlusion_dist.urdf.xacro
turtlebot_description/urdf/stacks/: ninja-hexagons.urdf.xacro
turtlebot_gazebo_arm/: CMakeLists.txt  package.xml
turtlebot_gazebo_arm/include/turtlebot_gazebo_arm/: ArmPlugin.h
turtlebot_gazebo_arm/msg/: GrabDropObject.msg
turtlebot_gazebo_arm/src/: ArmPlugin.cpp
turtlebot_gazebo_distance_sensor/: CMakeLists.txt  package.xml
turtlebot_gazebo_distance_sensor/include/turtlebot_gazebo_distance_sensor/: DistanceSensorPlugin.h  LogicalCameraSensor.hh
turtlebot_gazebo_distance_sensor/src/: DistanceSensorPlugin.cpp  LogicalCameraSensor.cc
turtlebot_gazebo_grid_annotator/: CMakeLists.txt  package.xml
turtlebot_gazebo_grid_annotator/include/turtlebot_gazebo_grid_annotator/: Annotator.h
turtlebot_gazebo_grid_annotator/src/: Annotator.cpp
turtlebot_gazebo_logical_camera/: CMakeLists.txt  package.xml
turtlebot_gazebo_logical_camera/include/: LogicalCameraPlugin.h
turtlebot_gazebo_logical_camera/src/: LogicalCameraPlugin.cpp
turtlebot_gazebo_object_possession/: CMakeLists.txt  package.xml
turtlebot_gazebo_object_possession/include/turtlebot_gazebo_object_possession/: ObjectPossessionPlugin.h
turtlebot_gazebo_object_possession/src/: ObjectPossessionPlugin.cpp
turtlebot_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  reload.sh
turtlebot_rviz_plugin/include/: LeonardoNavGoal.h  LeonardoPoseEst.h  RafaelNavGoal.h  RafaelPoseEst.h
turtlebot_rviz_plugin/src/: DonatelloNavGoal.cpp  DonatelloNavGoal.h  DonatelloPoseEst.cpp  DonatelloPoseEst.h  LeonardoNavGoal.cpp  LeonardoNavGoal.h  LeonardoPoseEst.cpp  LeonardoPoseEst.h  RafaelNavGoal.cpp  RafaelNavGoal.h  RafaelPoseEst.cpp  RafaelPoseEst.h  RobotBox.cpp  RobotBox.h  TurtlePanel.cpp  TurtlePanel.h  teleop_panel.cpp  teleop_panel.h
turtlebot_teleop/src/: turtlebot_joy.cpp
(+7 files in other folders)
