<?xml version="1.0"?>
<package>
  <name>hinged_door_controller</name>
  <version>0.0.0</version>
  <description>The hinged_door_controller package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>
  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>system_config</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>system_config</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
