<?xml version="1.0"?>
<package format="2">
  <name>poi_labeling</name>
  <version>0.0.0</version>
  <description>The floating_model_names package</description>

  <maintainer email="jakob@vs.uni-kassel.de">Stefan Jakon</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>qt_gui</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
