<?xml version="1.0"?>
<package format="2">
  <name>poi_spawner</name>
  <version>0.0.0</version>
  <description>The poi_spawner package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>system_config</depend>
  <depend>qt_gui</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
