<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_gazebo_grid_annotator</name>
  <version>0.0.0</version>
  <description>The turtlebot_gazebo_grid_annotator package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>ttb_msgs</depend>
  <depend>system_config</depend>
  <depend>world_model</depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
