<?xml version="1.0"?>
<package>
	<name>turtlebot_gazebo_logical_camera</name>
	<version>0.0.0</version>
	<description>The turtlebot_gazebo_logical_camera package</description>

	<maintainer email="gcastro@dc.uba.ar">Gaston Castro</maintainer>


	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>gazebo_plugins</build_depend>
	<build_depend>gazebo_ros</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>ttb_msgs</build_depend>
	<build_depend>system_config</build_depend>

	<run_depend>gazebo_plugins</run_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>ttb_msgs</run_depend>
	<run_depend>system_config</run_depend>


	<export>
		<!-- Other tools can request additional information be placed here -->
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>
